--- a/worker-repo/k8s/deploy.yaml
+++ b/worker-repo/k8s/deploy.yaml
@@ -33,6 +33,8 @@ spec:
             secretKeyRef:
               name: postgres-credentials
               key: password
+        - name: DB_NAME
+          value: "worker-db"
 
         - name: MQ_HOST
           value: "b-9b68e9e5-262b-4659-bea6-3bef70731fa9.mq.us-east-1.on.aws" # <POPULATE_FROM_TERRAFORM_OUTPUT: broker_endpoint (hostname part)>
