--- a/worker-repo/k8s/secrets-setup.yaml
+++ b/worker-repo/k8s/secrets-setup.yaml
@@ -1,7 +1,20 @@
-# Este arquivo consolida todos os ExternalSecrets para a aplicação do Worker.
-
-# --- ExternalSecret para PostgreSQL ---
-apiVersion: external-secrets.io/v1beta1
+# Configuração de segredos do Worker usando sua própria identidade (IRSA)
+apiVersion: external-secrets.io/v1
+kind: SecretStore
+metadata:
+  name: worker-secretstore
+  namespace: fiapx-worker
+spec:
+  provider:
+    aws:
+      service: SecretsManager
+      region: us-east-1
+      auth:
+        jwt:
+          serviceAccountRef:
+            name: worker-service-account
+---
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: postgres-db-secret
@@ -9,8 +22,8 @@ metadata:
 spec:
   refreshInterval: "1h"
   secretStoreRef:
-    name: cluster-secretstore
-    kind: ClusterSecretStore
+    name: worker-secretstore
+    kind: SecretStore
   target:
     name: postgres-credentials
     creationPolicy: Owner
@@ -18,8 +31,7 @@ spec:
   - extract:
       key: arn:aws:secretsmanager:us-east-1:239409137076:secret:rds!db-ee459848-fadb-4fb2-b6fc-0457b17f4fe2-8Lyvxs
 ---
-# --- ExternalSecret para RabbitMQ (Amazon MQ) ---
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: rabbitmq-secret
@@ -27,17 +39,17 @@ metadata:
 spec:
   refreshInterval: "1h"
   secretStoreRef:
-    name: cluster-secretstore
-    kind: ClusterSecretStore
+    name: worker-secretstore
+    kind: SecretStore
   target:
     name: rabbitmq-credentials
     creationPolicy: Owner
-  dataFrom:
-  - extract:
+  data:
+  - secretKey: password # Mapeia a string bruta para a chave 'password'
+    remoteRef:
       key: arn:aws:secretsmanager:us-east-1:239409137076:secret:fiapx-rabbitmq-password-91xBG4
 ---
-# --- ExternalSecret para Redis ---
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: redis-secret
@@ -45,11 +57,13 @@ metadata:
 spec:
   refreshInterval: "1h"
   secretStoreRef:
-    name: cluster-secretstore
-    kind: ClusterSecretStore
+    name: worker-secretstore
+    kind: SecretStore
   target:
     name: redis-credentials
     creationPolicy: Owner
-  dataFrom:
-  - extract:
+  data:
+  - secretKey: password
+    remoteRef:
       key: arn:aws:secretsmanager:us-east-1:239409137076:secret:/fiapx-redis/redis/user_password-v3-cB02YF
+      property: ""
