--- a/worker-repo/app/Dockerfile
+++ b/worker-repo/app/Dockerfile
@@ -14,5 +14,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["newrelic-admin", "run-program", "python", "main.py"]
+CMD ["python", "main.py"]
 
